--- a/deploy/.ebextensions/environmentvariables.config
+++ b/deploy/.ebextensions/environmentvariables.config
@@ -7,4 +7,8 @@ option_settings:
     SPRING_JPA_DATABASE_PLATFORM: org.hibernate.dialect.PostgreSQLDialect
     LUCENE_INDEX_DIR: /efs/lucene
     SERVER_PORT: 5000
+    USER_ADMIN: <USER_ADMIN>
+    USER_ADMIN_PASSWORD: <USER_ADMIN_PASSWORD>
+    USER_GUESS: <USER_GUESS>
+    USER_GUESS_PASSWORD: <USER_GUESS_PASSWORD>
     
