--- a/deploy/.ebextensions/environmentvariables.config
+++ b/deploy/.ebextensions/environmentvariables.config
@@ -9,6 +9,6 @@ option_settings:
     SERVER_PORT: 5000
     USER_ADMIN: <USER_ADMIN>
     USER_ADMIN_PASSWORD: <USER_ADMIN_PASSWORD>
-    USER_GUESS: <USER_GUESS>
-    USER_GUESS_PASSWORD: <USER_GUESS_PASSWORD>
+    USER_GUEST: <USER_GUEST>
+    USER_GUEST_PASSWORD: <USER_GUEST_PASSWORD>
     
