--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,25 @@
 		    <artifactId>jackson-datatype-hibernate5</artifactId>
 		    <version>2.9.2</version>
 		</dependency>
+		
+		<dependency>
+	   		<groupId>org.springframework.cloud</groupId>
+	   		<artifactId>spring-cloud-starter-feign</artifactId>
+	   		<version>1.4.6.RELEASE</version>
+	   	</dependency>
+	   	
+	   <dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+		  <!-- jsoup HTML parser library @ https://jsoup.org/ -->
+		  <groupId>org.jsoup</groupId>
+		  <artifactId>jsoup</artifactId>
+		  <version>1.11.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
