repositorio and domain

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-uri.elasticksearch.host=
+uri.elasticksearch.host=https://search-askaliensearch-uqm54ufvnxbritmgfmus6uec2a.us-east-1.es.amazonaws.com
